--- a/app/src/main/res/layout/dialog_recupero_password.xml
+++ b/app/src/main/res/layout/dialog_recupero_password.xml
@@ -39,6 +39,7 @@
         android:id="@+id/dialog_input_matricola"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
         android:hint="@string/dialog_password_3"
         android:inputType="textPersonName" />
 
