--- a/app/src/main/res/layout/activity_prenotazione_studente.xml
+++ b/app/src/main/res/layout/activity_prenotazione_studente.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_pren_stud"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bianco"
@@ -47,7 +48,6 @@
                             android:visibility="visible">
 
                                 <TextView
-                                    android:id="@+id/textView17"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/activity_pren_singolo_1" />
@@ -81,7 +81,6 @@
                                     android:layout_height="match_parent">
 
                                         <TextView
-                                            android:id="@+id/textView22"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:text="@string/activity_pren_singolo_2"
@@ -100,7 +99,6 @@
                                     android:layout_height="match_parent">
 
                                         <TextView
-                                            android:id="@+id/textView24"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:layout_marginEnd="10dp"
@@ -122,7 +120,6 @@
                                     android:gravity="center_vertical">
 
                                         <TextView
-                                            android:id="@+id/textView27"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:text="@string/activity_pren_singolo_4"
