--- a/app/src/main/res/layout/row_layout_home.xml
+++ b/app/src/main/res/layout/row_layout_home.xml
@@ -10,15 +10,16 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
-        android:orientation="vertical"
-        android:layout_marginEnd="10dp">
+        android:gravity="center_vertical"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/row_image_home"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginTop="25dp"
             android:contentDescription="@string/icon"
             app:srcCompat="@android:drawable/star_big_on" />
     </LinearLayout>
@@ -28,12 +29,28 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/nomeAula_home"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/nomeAula_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/img_pref"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:contentDescription="@string/icon"
+                android:visibility="invisible"
+                app:srcCompat="@drawable/heart" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/luogoAula_home"
