--- a/app/src/main/res/layout/dialog_gestione_gruppo.xml
+++ b/app/src/main/res/layout/dialog_gestione_gruppo.xml
@@ -36,20 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:visibility="gone">
-
-        <TextView
-            android:id="@+id/oreResidueDialog"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <TextView
-            android:id="@+id/dataScadenzaDialog"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-    </LinearLayout>
+        android:visibility="gone"/>
 
     <TableLayout
         android:layout_width="match_parent"
