--- a/app/src/main/res/layout/row_layout_home.xml
+++ b/app/src/main/res/layout/row_layout_home.xml
@@ -29,29 +29,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/nomeAula_home"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/nomeAula_home"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:layout_marginEnd="10dp" />
-
-            <ImageView
-                android:id="@+id/img_pref"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:contentDescription="@string/icon"
-                android:visibility="invisible"
-                app:srcCompat="@drawable/heart" />
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/luogoAula_home"
