--- a/app/src/main/res/layout/dialog_scegli_gruppo_griglia.xml
+++ b/app/src/main/res/layout/dialog_scegli_gruppo_griglia.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
@@ -10,9 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/grigio_chiaro"
-        android:text="Seleziona il gruppo per cui vuoi prenotare:"
-        android:textColor="#000000"
-        android:textSize="18sp" />
+        android:text="@string/dialog_scegligruppo"
+        android:textColor="@color/colorPrimary"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <GridView
         android:id="@+id/grigliaGruppi"
